# reference-sample

./: .aliases  .gitignore  CMakeLists.txt  Readme.md  log.txt  pytest.py  tau.slcio
processors/check_isolated_lepton_tagging/include/: check_isolated_lepton_tagging.h
processors/check_isolated_lepton_tagging/src/: check_isolated_lepton_tagging.cc
processors/check_relation/include/: check_relation_processor.h
processors/check_relation/src/: check_relation_processor.cc
processors/draft/include/: draft_processor.h
processors/draft/src/: draft_processor.cc
processors/example/include/: example_processor.h  example_processor_verbose.h
processors/example/src/: example_processor.cc
processors/mc_as_reconstructed/include/: mc_as_reconstructed_processor.h
processors/mc_as_reconstructed/src/: mc_as_reconstructed_processor.cc
processors/shared_functionality/include/: ref_util.h
processors/shared_functionality/src/: ref_util.cc
processors/skip_empty_events/include/: skip_empty_events_processor.h
processors/skip_empty_events/src/: skip_empty_events_processor.cc
processors/slcio_to_root/include/: master_thesis_root.h  slcio_to_root.h
processors/slcio_to_root/src/: master_thesis_root.cc  slcio_to_root.cc
processors/split_of_z/include/: split_of_z_processor.h
processors/split_of_z/src/: split_of_z_processor.cc
processors/split_off_z/include/: fake_znunu_from_zqq_processor.h  split_off_z_processor.h
processors/split_off_z/src/: fake_znunu_from_zqq_processor.cc  split_off_z_processor.cc
processors/tau_cones/include/: tau_cones_bdt_input_processor.h  tau_cones_processor.h  tau_cones_util.h
processors/tau_cones/src/: strict_taus.md  tau_cones_bdt_input_processor.cc  tau_cones_processor.cc  tau_cones_util.cc
processors/tau_from_track/include/: tau_from_track_processor.h
processors/tau_from_track/src/: tau_from_track_processor.cc
pysteer/: __init__.py  ilcsoft_processors_descriptions.json  make_html.py  marlin_global.py  marlin_xml.py  project_processors_descriptions.json  pysteer.py
pysteer/write_processor_parameters/: __init__.py  extract_from_cpp.py  processor_paths.py  write_dict.py
singularity/: Readme.md  Singularity  environment.yml  environment_old.yml
steering/: check_isolated_lepton_tagging.xml  mc_as_reconstructed.xml  pytest.py
steering/pysteer/: __init__.py  marlin_global.py  marlin_xml.py  project_processors.json  project_processors_descriptions.json  pysteer.py
steering/pysteer/data/: ilcsoft_processors.json  project_processors.json  project_processors_descriptions.json
steering/pysteer/write_processor_parameters/: __init__.py  extract_from_cpp.py  write_dict.py
